// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegoMetricsCalculator calculate 1`] = `
Object {
  "entries": Array [
    DateEntry {
      "date": "2018-10-10",
      "values": Object {
        "someKey": 16,
        "someOtherKey": 9,
      },
    },
    DateEntry {
      "date": "2018-10-11",
      "values": Object {
        "someKey": 3,
        "someOtherKey": 13,
      },
    },
  ],
  "keys": Array [
    "someKey",
    "someOtherKey",
  ],
}
`;

exports[`LegoMetricsCalculator calculate with periods 1`] = `
Object {
  "entries": Array [
    DateEntry {
      "date": "2018-10-11",
      "values": Object {
        "someKey": 19,
        "someOtherKey": 22,
      },
    },
  ],
  "keys": Array [
    "someKey",
    "someOtherKey",
  ],
}
`;
